fixes and validation